[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/PlayableCharacters/CharacterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/BurningGhoul/burning-ghoul.png" type="Texture" id=2]
[ext_resource path="res://Shaders/GlowShader.shader" type="Shader" id=4]
[ext_resource path="res://Sprites/Gothicvania/Characters/Enemies/ChurchStage/BurningGhoul/burning-ghoul-emission-mask.png" type="Texture" id=5]
[ext_resource path="res://Script/Enemies/BurningGhoulStateMachine.gd" type="Script" id=6]
[ext_resource path="res://Script/Enemies/BurningGhoul.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Enemies/DeathAnimation.tscn" type="PackedScene" id=8]



[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/glow_color = Color( 1, 0.494118, 0, 1 )
shader_param/emission_texture = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 57, 60 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 57, 0, 57, 60 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 114, 0, 57, 60 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 171, 0, 57, 60 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 228, 0, 57, 60 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 285, 0, 57, 60 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 342, 0, 57, 60 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 399, 0, 57, 60 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "running",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 7, 17.6558 )

[sub_resource type="Animation" id=12]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 2.5, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=13]
radius = 13.1702

[node name="BurningGhoul" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 10
script = ExtResource( 7 )

[node name="Body" parent="." index="0"]
position = Vector2( 0, -29.3956 )

[node name="Sprite" parent="Body" index="0"]
material = SubResource( 1 )
frames = SubResource( 10 )
animation = "running"
frame = 4
playing = true

[node name="DeathAnimation" parent="Body" index="1" instance=ExtResource( 8 )]
visible = false

[node name="FloorRaycast" type="RayCast2D" parent="Body" index="2"]
position = Vector2( -10, 29.3956 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -17.3442 )
shape = SubResource( 11 )

[node name="AnimationPlayer" parent="." index="2"]
anims/hurt = SubResource( 12 )

[node name="StateMachine" parent="." index="3"]
script = ExtResource( 6 )

[node name="CollideWithPlayer" type="Area2D" parent="." index="4"]
collision_layer = 4
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollideWithPlayer" index="0"]
position = Vector2( -2, -18.2895 )
shape = SubResource( 13 )
[connection signal="body_entered" from="CollideWithPlayer" to="." method="_on_CollideWithPlayer_body_entered"]
